[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
gloo-events = "0.1"
gloo-utils = "0.1.6"
gloo-timers = "0.2"
thiserror = "1"
js-sys = "0.3"

yew = { version = "0.20.0", features = ["csr"] }

web-graph = { path = "../..", features = ["yew"] }
